# ego_control

./: README.md
Fast-Drone-250/src/planner/plan_manage/launch/: run_in_sim.launch
Fast-Drone-250/src/realflight_modules/ego_bridge/: CMakeLists.txt  package.xml
Fast-Drone-250/src/realflight_modules/ego_bridge/launch/: ego_bridge.launch
Fast-Drone-250/src/realflight_modules/ego_bridge/scripts/: land.sh
Fast-Drone-250/src/realflight_modules/ego_bridge/src/: ego_bridge_node.cpp
src/api_pkg/: CMakeLists.txt  package.xml
src/api_pkg/include/API_pkg/: flight.h
src/api_pkg/src/: demo_node.cpp  flight.cpp  offboard_single_position.cpp
src/craic_pillar_debug/: CMakeLists.txt  package.xml
src/craic_pillar_debug/launch/: frame_center_constraint_compare.launch  frame_center_constraint_mission_home_compare.launch  frame_cloud_debug.launch  frame_cross_demo.launch  frame_debug.launch  pillar_debug.launch  takeoff_align_land_demo.launch
src/craic_pillar_debug/src/: frame_cloud_debug_node.cpp  frame_cross_demo_node.cpp  frame_debug_node.cpp  pillar_debug_node.cpp  takeoff_align_land_demo.cpp
src/ego_api/: CMakeLists.txt  package.xml
src/ego_api/config/: craic-autostart.env.example
src/ego_api/include/ego_api/: ego_api.h
src/ego_api/launch/: craic_competition_demo.launch  craic_web_control.launch  ego_api_full_demo.launch
src/ego_api/scripts/: craic_autostart.sh  craic_web_control.py  disable_craic_autostart.sh  enable_craic_autostart.sh  install_craic_autostart_service.sh
src/ego_api/src/: cloud_self_filter_node.cpp  craic_competition_demo.cpp  ego_api.cpp  ego_api_demo.cpp  frame_detector_node.cpp  override_task_demo.cpp  pillar_detector_node.cpp
src/ego_api/systemd/: craic-autostart.service
src/planner/plan_manage/: CMakeLists.txt  package.xml
src/planner/plan_manage/include/plan_manage/: ego_replan_fsm.h
src/planner/plan_manage/launch/: advanced_param.xml  advanced_param_exp.xml  default.rviz  single_run_in_exp.launch
src/planner/plan_manage/src/: ego_replan_fsm.cpp  traj_server.cpp
src/realflight_modules/ego_bridge/: CMakeLists.txt
src/realflight_modules/ego_bridge/config/: ego_bridge_param.yaml
src/realflight_modules/ego_bridge/launch/: ego.rviz  ego_bridge.launch  ego_bridge_monitor.launch  rviz.launch
src/realflight_modules/ego_bridge/scripts/: takeoff.sh
src/realflight_modules/ego_bridge/src/: ego_bridge_node.cpp  rc_commander_node.cpp  status_monitor_node.cpp
tmp/docs/craic_rules_unzip/: [Content_Types].xml
tmp/docs/craic_rules_unzip/docProps/: app.xml  core.xml
tmp/docs/craic_rules_unzip/word/: document.xml  endnotes.xml  fontTable.xml  footnotes.xml  numbering.xml  settings.xml  styles.xml
tmp/docs/craic_rules_unzip/word/_rels/: document.xml.rels
