<?xml version="1.0"?>
<package format="2">
  <name>ego_api</name>
  <version>1.0.0</version>
  <description>High-level blocking API wrapping ego_bridge for flight control.</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>quadrotor_msgs</depend>

  <export>
  </export>
</package>
